<resources>
    <string name="app_name">NoPhoneX</string>
    <string name="tasks">Tasks</string>
    <string name="call">Call</string>
    <string name="directions">Directions</string>
    <string name="settings">Settings</string>
    <string name="enter_todo_task">Enter Todo Here</string>
    <string name="call_number">9999-999-999</string>
    <string name="loading_contact_msg">Permission is Not Granted Loading Contacts</string>
    <string name="set_theme">Set Dark Theme</string>
    <string name="open_device_settings">Open Device Settings</string>
    <string name="maps_api_key">AIzaSyBuidG7Idh6lgY4Fmwrt7eZf9CEq5nRUBU</string>
    <string name="title_activity_maps">Map</string>
</resources>
