<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dp_40"
    android:paddingTop="@dimen/dp_20"
    android:background="?attr/app_bg"
    tools:context=".ui.activity.SettingsActivity">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="21 Jun, 2018"
        android:textColor="?attr/textColor"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_time"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/settings"
        android:textColor="?attr/textColor"
        android:textSize="@dimen/sp_30" />


    <TextView
        android:id="@+id/tv_set_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_settings"
        android:layout_marginTop="@dimen/dp_80"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:text="@string/set_theme"
        android:textColor="?attr/textColor"
        android:textSize="@dimen/sp_15" />

    <TextView
        android:id="@+id/tv_device_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_10"
        android:layout_below="@+id/tv_set_theme"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/open_device_settings"
        android:textColor="?attr/textColor"
        android:textSize="@dimen/sp_15" />
</RelativeLayout>